--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/material-bottom-tabs": "^6.2.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
     "expo-font": "~10.1.0",
@@ -30,7 +31,8 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
